--- a/css/efectoselector.css
+++ b/css/efectoselector.css
@@ -2,6 +2,9 @@ body {
 	margin: 0;
 	padding: 0;
 	background-image: url(../imgs/cabania.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 	display: flex;
 	justify-content: center;
 	height: 100vh;
